syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.demo";
option java_outer_classname = "DemoProto";
option objc_class_prefix = "HLW";

package demo;

service cases {
  rpc addCase (caseRequest) returns (reply) {}
  rpc listCases (Empty) returns (stream caseReply) {}
}

message caseRequest {
  string full_name = 1;
  string location = 2;
  int32 age = 3;
  string infected_type = 4;
  string state = 5;
}

message reply {
  string message = 1;
}

message Empty {}

message caseReply {
  string full_name = 1;
  string location = 2;
  int32 age = 3;
  string infected_type = 4;
  string state = 5;
}